assets/css/style.css
/* Google fonts import */
@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&display=swap');

/* Asterisk wildcard selector to ovverride styles added by the browser */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* General styles */
body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    /* Generic project styles */
    color: #3a3a3a;
    font-family: 'Lato', sans-serif;
}

h1, h2, h3 {
    font-family: 'Oswald', sans-serif;
    text-transform: uppercase;
    letter-spacing: 2px;
    color: #252525
}

/* Header */
header {
    background-color: #ffffff;
    padding: 0 1rem;
    position: fixed;
    z-index: 99;
    width: 100%;
    box-shadow: 0 2px 2px #3a3a3a;
    display: flex;
    justify-content: space-between;
    align-items: baseline;
}

header a {
    text-decoration: none;
    color: inherit;
}


#menu {
    font-size: 110%;
    letter-spacing: 4px;
    list-style-type: none;
}

#menu > li {
    margin-bottom: 1em;
}

.active {
    border-bottom: 1px solid #3a3a3a
}
/* nav bar styles with dropdown toggle */

nav {
    position: absolute;
    background-color: #ffffff;
    padding: 0 1rem;
    width: 100%;
    left: 0;
    box-shadow: 0 2px 2px #3a3a3a;
    display: none;
    top: 100%;
}

/* nav toggle*/
#nav-toggle:checked~nav {
    display: block;
}

#nav-toggle {
    display: none;
}

.nav-toggle-label {
    font-size: 2rem;
}

/* Main Content */
main {
    /* Make main element take up surplus space to push footer down */
    flex: 1 0 auto;
    margin-top: 47px;
}

/* Hero section */
#hero {
    height: 600px;
    width: 100%;
    background: url("../images/hero.webp") no-repeat center center/cover;
    position: relative;
}

/*Final rgba value sets the opacity to semi transparent*/
#cover-text {
    background-color: rgba(241, 109, 107, .7);
    position: absolute;
    bottom: 30px;
    width: 80%;
    min-height: 200px;
    padding: 40px;
    padding-left: 10px;
}

#cover-text > h2, #cover-text > h3 {
    color: #ffffff;
}

#reasons {
    width: 90%;
    margin: 20px auto;
}
 #reasons h2{
    margin-bottom: 20px;
    text-align: center;
    font-size: 280%;
 }

#benefits-physical > div {
    line-height: 20px;
    margin-bottom: 20px;
}

#benefits-mental > div {
    line-height: 20px;
    margin-bottom: 20px;
}

#benefits p {
    padding: 0 20px;
}

hr {
    border-top: 1px solid #3a3a3a;
    margin: 5px 0;
}
/* Footer */
#social-networks {
    text-align: center;
    padding: 20px 0;
    display: flex;
    justify-content: space-evenly;
    list-style-type: none;
}

#circle-cover-bg {
    background: url("../images/reasons-image.webp") no-repeat top center/cover;
    height: 90vw;
    width: 90vw;
    margin-bottom: 20px;
    border-radius: 50%;
    max-width: 300px;
    max-height: 300px;
}


#social-networks i {
    font-size: 160%;
    padding: 5%;
    color: #3a3a3a;
}


/* media query: tablets and larger (768px and up) */

@media screen and (min-width: 768px ) {
    /* Header */
    nav {
        display: block;
        position: relative;
        box-shadow: none;
        width: fit-content;
        padding-right: 1rem;
    }
    #menu {
        display: flex;   
    }

    #menu > li {
        padding-left: 1rem;
    }

    .nav-toggle-label {
        display: none;
    }

    #logo {
        font-size: 280%;
        line-height: 75px;
        margin-left: 0.5rem;
        
    }

    main {
        margin-top: 79px;
    }
    #cover-text {
        width: 300px;
        right: 70px;
    }
    #benefits-image {
    display: flex;
    align-items: center;
    justify-content: center;
    }

    #benefits-physical,
    #benefits-mental {
        display: flex;
        flex-direction: column;
        width: 100%;
    }

    #benefits-physical > div,
    #benefits-mental > div {
        width: 75%;
    }

    #benefits-mental > div {
        text-align: end;
        align-self: flex-end;
    }
}

/* large devices (laptops and desk tops 992px and up*/

@media screen and (min-width: 992px) {
    #menu a:hover {
        border-bottom: 1px solid #3a3a3a
    }
}

@media screen and (min-width: 992px) {
    /* Reasons Section*/
    #benefits {
        display: flex;
        flex-direction: row;
    }

    #benefits > div {
        flex: 1;
    }

    #benefits-image {
        order: 0;
    }

    #benefits-mental {
        order: 1;
    }

    #benefits-mental > div {
        align-self: flex-start;
    }

    #benefits-pyhsical > div {
        align-self: flex-end;
    }
}

